# AgenticTechicalAnalysis

my-python-project/: README.md  holdings.csv  pyproject.toml  requirements.txt
my-python-project/scripts/: setup.bat  setup.ps1  start-client.bat  start-client.ps1  start-server.bat  start-server.ps1  test.bat  test.ps1
my-python-project/src/: AlphaVantageTest.py  hello.py  techanalysis_projects.code-workspace  testimport.py  zerodhaTrade.py
my-python-project/src/Server/: mcp_server.py
my-python-project/src/Server/tools/: chat_tools.py  coding_tools.py  registry.py  research_tools.py  video_tools.py
my-python-project/src/agents/: chat_agent.py  coding_agent.py  research_agent.py  video_analysis_agent.py
my-python-project/src/client/: client.py  groq_client.py
my-python-project/src/nsedata/: backtester.py
my-python-project/src/utils/: config.py
my-python-project/tests/: test_agents.py
